# hackathon

./: .gitignore  Dockerfile  Makefile  app.py  client.py  crawler.py  manager.py  pyproject.toml  readme.md  requirements.txt  settings.py  setup.py  sqlite.db  test.sh  todo.md  utils.py
models/: models.py
sql-scripts/: clean-tables.sql  create_tables.sql
templates/: index.html
